--- a/Unit 1 - Module 6 - Using RDDs Part 2 Transformations and Actions.ipynb
+++ b/Unit 1 - Module 6 - Using RDDs Part 2 Transformations and Actions.ipynb
@@ -10,7 +10,7 @@
    "source": [
     "# Spark in Motion\n",
     "\n",
-    "## Unit 1: An Introduction to Apache Spark\n",
+    "## Unit 1: AN Introduction to Apache Spark\n",
     "\n",
     "### Module 6: Using RDDs Part 2: Transformations and Actions\n",
     "\n",
