--- a/Unit 1 - Module 6 - Using RDDs Part 2 Transformations and Actions.ipynb
+++ b/Unit 1 - Module 6 - Using RDDs Part 2 Transformations and Actions.ipynb
@@ -27,7 +27,7 @@
    },
    "source": [
     "## Transformations \n",
-    "<img style=\"margin:0px auto;display:block;background: rgba(238, 238, 238, .5);height:550px; width:auto\" src=\"/images/1.6/transformers-1333083_1920.jpg\">"
+    "<img style=\"margin:0px auto;display:block;background: rgba(238, 238, 238, .5);height:550px; width:auto\" src=\"./images/1.6/transformers-1333083_1920.jpg\">"
    ]
   },
   {
